--- a/src/main/resources/templates/Main_Screen.html
+++ b/src/main/resources/templates/Main_Screen.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+    <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1">
+    <title>Hazt-ver</title>
 </head>
 <body>
-
+<div class="topnavbar" id="TopNavBar">
+    <a href="#" class="active">Sobre mí</a>
+    <a href="#">Mis proyectos</a>
+</div>
 </body>
 </html>
