--- a/src/main/resources/static/Styles.css
+++ b/src/main/resources/static/Styles.css
@@ -1,26 +1,94 @@
-.container {
-    display: inline-block;
-    cursor: pointer;
+body {
+    max-width: 0px;
+    padding: 0px;
+    font-family: sans-serif;
+    background-color: #e91e63;
 }
 
-.bar1, .bar2, .bar3 {
-    width: 35px;
-    height: 5px;
-    background-color: #333;
-    margin: 6px 0;
-    transition: 0.4s;
+ul {
+    position: absolute;
+    top: 5.5%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    margin: 0px;
+    padding: 20px 0px;
+    background-color: #fff;
+    display: flex;
+    border-radius: 10px;
+    box-shadow: 0px 10px 30px rgba(0, 0, 0, .3);
 }
 
-.change .bar1 {
-    -webkit-transform: rotate(-45deg) translate(-9px, 6px);
-    transform: rotate(-45deg) translate(-9px, 6px);
+ul li {
+    list-style: none;
+    text-align: center;
+    display: block;
+    border-right: 1px solid rgba(0, 0, 0, 0.2);
 }
 
-.change .bar2 {
-    opacity: 0;
+ul li:last-child {
+    border-right: none;
 }
 
-.change .bar3 {
-    -webkit-transform: rotate(45deg) translate(-8px, -8px);
-    transform: rotate(45deg) translate(-8px, -8px);
+ul li a {
+    text-decoration: none;
+    padding: 0px 50px;
+    display: block;
+}
+
+ul li a .icon {
+    width: 40px;
+    height: 40px;
+    text-align: center;
+    overflow: hidden;
+    margin: 0px auto 10px;
+}
+
+ul li a .icon .fa {
+    width: 100%;
+    height: 100%;
+    line-height: 40px;
+    font-size: 34px;
+    transition: 0.5s;
+    color: #000;
+}
+
+ul li a .icon .fa:last-child {
+    color: #e91e63;
+}
+
+/*Efecto de transición*/
+ul li a:hover .icon .fa {
+    transform: translateY(-100%);
+
+}
+
+ul li a .menu-option {
+    position: relative;
+    height: 20px;
+    width: 100%;
+    display: block;
+}
+
+ul li a .menu-option span {
+    display: block;
+    position: relative;
+    color: #000;
+    font-size: 18px;
+    line-height: 20px;
+    transition: 0.5s;
+    overflow: hidden;
+}
+
+ul li a .menu-option span:before {
+    content: attr(data-text);
+    position: absolute;
+    top: -100%;
+    left: 0%;
+    width: 100%;
+    height: 100%;
+    color: #e91e63;
+}
+
+ul li a:hover .menu-option span:before {
+    transform: translateY(20px);
 }
