--- a/src/main/resources/templates/Main_Screen.html
+++ b/src/main/resources/templates/Main_Screen.html
@@ -3,36 +3,45 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <!-- To ensure proper rendering and touch zooming in mobile phone-->
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <meta name="description" content="">
-    <meta name="author" content="">
-
+    <link rel="stylesheet"
+          href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>Hazt-Ver</title>
-
-    <!-- Bootstrap core CSS -->
-    <link href="/webjars/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-
-    <!-- Custom styles for this template -->
     <link href="/Styles.css" rel="stylesheet">
-
-
-    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-    <!--[if lt IE 9]>
-    <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
-    <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
 </head>
 <body>
-<div class="container" onclick="myFunction(this)">
-    <div class="bar1"></div>
-    <div class="bar2"></div>
-    <div class="bar3"></div>
-</div>
-<script>
-    function myFunction(x) {
-        x.classList.toggle("change");
-    }
-</script>
+<ul>
+    <li>
+        <a href="#">
+            <div class="icon">
+                <i class="fa fa-home" aria-hidden="true"></i>
+                <!-- Para la transición -->
+                <i class="fa fa-home" aria-hidden="true"></i>
+            </div>
+            <div class="menu-option"><span data-text="Inicio">Inicio</span></div>
+        </a>
+    </li>
+    <li>
+        <a href="#">
+            <div class="icon">
+                <i class="fa fa-file-text" aria-hidden="true"></i>
+                <!-- Para la transición -->
+                <i class="fa fa-file-text" aria-hidden="true"></i>
+            </div>
+            <div class="menu-option"><span data-text="Proyectos">Proyectos</span></div>
+        </a>
+    </li>
+    <li>
+        <a href="#">
+            <div class="icon">
+                <i class="fa fa-envelope" aria-hidden="true"></i>
+                <!-- Para la transición -->
+                <i class="fa fa-envelope" aria-hidden="true"></i>
+            </div>
+            <div class="menu-option"><span data-text="Contacto">Contacto</span></div>
+        </a>
+    </li>
+</ul>
 </body>
 </html>
