--- a/src/main/resources/templates/Contact_Me.html
+++ b/src/main/resources/templates/Contact_Me.html
@@ -1,10 +1,30 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es" xmlns:th="http://www.thymeleaf.org">
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <!-- To ensure proper rendering and touch zooming in mobile phone-->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet"
+          href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;600;700&display=swap" rel="stylesheet">
+    <link href="/Styles.css" rel="stylesheet">
+    <link href="/webIcon.ico" rel="icon">
+    <title>Hazt-Ver</title>
 </head>
 <body>
-
+<header>
+    <div class="container">
+        <nav>
+            <h2>HAZT-VER</h2>
+            <ul>
+                <li><a href="#" class="ui-state-active">Sobre mí</a></li>
+                <li><a href="#">Mis proyectos</a></li>
+                <li><a href="#">Contacto</a></li>
+            </ul>
+        </nav>
+    </div>
+</header>
 </body>
 </html>
