--- a/src/main/resources/templates/Main_Screen.html
+++ b/src/main/resources/templates/Main_Screen.html
@@ -7,61 +7,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet"
           href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-    <title>Hazt-Ver</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;600;700&display=swap" rel="stylesheet">
     <link href="/Styles.css" rel="stylesheet">
+    <link href="/webIcon.ico" rel="icon">
+    <title>Hazt-Ver</title>
 </head>
 <body>
-<div class="menu-toggle" onclick="myFunction(this)">
-    <div class="bar1"></div>
-    <div class="bar2"></div>
-    <div class="bar3"></div>
-</div>
-<ul>
-    <li>
-        <a href="#">
-            <div class="icon">
-                <i class="fa fa-home" aria-hidden="true"></i>
-                <!-- Para la transición -->
-                <i class="fa fa-home" aria-hidden="true"></i>
-            </div>
-            <div class="menu-option"><span data-text="Inicio">Inicio</span></div>
-        </a>
-    </li>
-    <li>
-        <a href="#">
-            <div class="icon">
-                <i class="fa fa-file-text" aria-hidden="true"></i>
-                <!-- Para la transición -->
-                <i class="fa fa-file-text" aria-hidden="true"></i>
-            </div>
-            <div class="menu-option"><span data-text="Proyectos">Proyectos</span></div>
-        </a>
-    </li>
-    <li>
-        <a href="#">
-            <div class="icon">
-                <i class="fa fa-envelope" aria-hidden="true"></i>
-                <!-- Para la transición -->
-                <i class="fa fa-envelope" aria-hidden="true"></i>
-            </div>
-            <div class="menu-option"><span data-text="Contacto">Contacto</span></div>
-        </a>
-    </li>
-</ul>
+<header>
+    <div class="container">
+        <nav>
+            <h2>HAZT-VER</h2>
+            <ul>
+                <li><a href="#" class="ui-state-active">Sobre mí</a></li>
+                <li><a href="#">Mis proyectos</a></li>
+                <li><a href="#">Contacto</a></li>
+            </ul>
+        </nav>
+    </div>
+</header>
 </body>
-<script
-        src="https://code.jquery.com/jquery-3.6.0.js"
-        integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk="
-        crossorigin="anonymous"></script>
-<script type="text/javascript">
-    function myFunction(x) {
-        x.classList.toggle("change");
-    }
-
-    $(document).ready(function () {
-        $('.menu-toggle').click(function () {
-            $('ul').toggleClass('active')
-        })
-    })
-</script>
 </html>
