--- a/src/main/resources/templates/Main_Screen.html
+++ b/src/main/resources/templates/Main_Screen.html
@@ -8,23 +8,25 @@
     <link rel="stylesheet"
           href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;600;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;600;700&display=swap"
+          rel="stylesheet">
     <link href="/Styles.css" rel="stylesheet">
-    <link href="/webIcon.ico" rel="icon">
+    <link href="/images/webIcon.ico" rel="icon">
     <title>Hazt-Ver</title>
 </head>
 <body>
-<header>
-    <div class="container">
-        <nav>
-            <h2>HAZT-VER</h2>
+<!--Sección para la imagen y la barra de navegación-->
+<section class="header">
+    <nav>
+        <a><img src="images/webIcon.ico"></a>
+        <div class="nav-links">
             <ul>
-                <li><a href="#" class="ui-state-active">Sobre mí</a></li>
-                <li><a href="#">Mis proyectos</a></li>
-                <li><a href="#">Contacto</a></li>
+                <li href="#">Proyectos</li>
+                <li href="#">Currículum</li>
+                <li href="#">Contacto</li>
             </ul>
-        </nav>
-    </div>
-</header>
+        </div>
+    </nav>
+</section>
 </body>
 </html>
