Advancing the design of the main screen

--- a/src/main/resources/templates/Main_Screen.html
+++ b/src/main/resources/templates/Main_Screen.html
@@ -3,10 +3,12 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <!-- To ensure proper rendering and touch zooming in mobile phone-->
+    <!-- Para garantizar una representación adecuada y zoom táctil en dispositivos móviles -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Para emplear diferentes iconos -->
     <link rel="stylesheet"
           href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <!-- Para emplear diferentes estilos de fuente -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;600;700&display=swap"
           rel="stylesheet">
@@ -15,18 +17,27 @@
     <title>Hazt-Ver</title>
 </head>
 <body>
-<!--Sección para la imagen y la barra de navegación-->
+<!-- Sección para la imagen, la barra de navegación y la presentación -->
 <section class="header">
     <nav>
-        <a><img src="images/webIcon.ico"></a>
+        <a class> <img src="images/webIcon.ico"></a>
         <div class="nav-links">
+            <i class="fa fa-times"></i>
             <ul>
+                <li href="#">Inicio</li>
                 <li href="#">Proyectos</li>
                 <li href="#">Currículum</li>
                 <li href="#">Contacto</li>
             </ul>
         </div>
+        <i class="fa fa-bars"></i>
     </nav>
+    <!-- Presentación -->
+    <div class="about-me">
+        <h1>Javier Borreguero</h1>
+        <p>Desarrollador de software y amante de las nuevas tecnologías</p>
+        <a href="#" class="learn-more">Saber más</a>
+    </div>
 </section>
 </body>
 </html>
