--- a/src/main/resources/static/Styles.css
+++ b/src/main/resources/static/Styles.css
@@ -1,20 +1,23 @@
-/* Configuración general de la web */
+/* ---Configuración general de la web--- */
 * {
     margin: 0px;
     padding: 0px;
     font-family: 'Poppins', sans-serif;
 }
 
-/*Configuración de la imagen*/
+/* ----------------------------------- */
+/* ---Configuración de la imagen--- */
 .header {
-    min-height: 100vh;
+    min-height: 115vh;
     width: 100%;
     background-image: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0)), url("images/portada.jpg");
-    background-position: center;
+    background-position: initial;
     background-size: cover;
-    position: relative;
+    background-repeat: no-repeat;
+    position: center;
 }
 
+/* ----------------------------------- */
 /* Top nav bar y menú de opciones*/
 nav {
     display: flex;
@@ -25,12 +28,13 @@ nav {
 }
 
 nav img {
-    width: 105px;
+    width: 100px;
 }
 
 .nav-links {
     flex: 1;
     text-align: right;
+    cursor: pointer;
 }
 
 .nav-links ul li {
@@ -40,9 +44,110 @@ nav img {
     position: relative;
 }
 
-.nav-links ul li {
+.nav-links ul li a {
     color: white;
     text-decoration: none;
     font-size: 13px;
 }
 
+/* Cuando se pasa el ratón por encima de las opciones del menú, se subraya */
+.nav-links ul li::after {
+    content: '';
+    width: 0%;
+    height: 2px;
+    background: darkgrey;
+    display: block;
+    margin: auto;
+    transition: 0.5s;
+}
+
+.nav-links ul li:hover::after {
+    width: 100%;
+}
+
+/* ----------------------------------- */
+/* Presentación */
+.about-me {
+    width: 90%;
+    color: white;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-align: center;
+}
+
+.about-me h1 {
+    font-size: 62px;
+}
+
+.about-me p {
+    margin: 10px 0px 40px;
+    font-size: 16px;
+    color: white;
+}
+
+.learn-more {
+    display: inline-block;
+    text-decoration: none;
+    color: white;
+    border: 1px solid white;
+    padding: 12px 34px;
+    font-size: 15px;
+    background: transparent;
+    position: relative;
+    cursor: pointer;
+}
+
+/* Al pasar el ratón por encima, el botón se rellena de color (se mantiene oculto)*/
+.learn-more:hover {
+    border: 1px solid white;
+    background: darkgrey;
+    color: black;
+    transition: 1s;
+}
+
+/* ----------------------------------- */
+/* --- Meú lateral --- */
+nav .fa {
+    display: none;
+}
+
+/* ------------------ */
+/* ---Responsive--- */
+@media (max-width: 600px) {
+    .about-me h1 {
+        font-size: 20px;
+    }
+
+    .nav-links ul li {
+        display: block;
+    }
+
+    /* --- Se despliega el menú lateral con las opciones del menú */
+    .nav-links {
+        position: absolute;
+        color: black;
+        background: white;
+        height: 115vh;
+        width: 200px;
+        top: 0px;
+        right: 0px;
+        text-align: left;
+        z-index: 2;
+    }
+
+    /* Los iconos de menu y cerrar se muestran */
+    nav .fa-times {
+        display: block;
+        color: black;
+        margin: 10px;
+        font-size: 22px;
+        cursor: pointer;
+    }
+    .nav-links ul {
+        padding: 30px;
+    }
+}
+
+/*-----------------*/
