--- a/src/main/resources/static/style/Styles.css
+++ b/src/main/resources/static/style/Styles.css
@@ -10,7 +10,7 @@
 .header {
     min-height: 115vh;
     width: 100%;
-    background-image: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0)), url("images/portada.jpg");
+    background-image: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0)), url("../images/portada.jpg");
     background-position: initial;
     background-size: cover;
     background-repeat: no-repeat;
@@ -132,22 +132,29 @@ nav .fa {
         height: 115vh;
         width: 200px;
         top: 0px;
-        right: 0px;
+        right: -200px;
         text-align: left;
         z-index: 2;
+        transition: 1s;
     }
 
     /* Los iconos de menu y cerrar se muestran */
-    nav .fa-times {
+    nav .fa {
         display: block;
         color: black;
         margin: 10px;
         font-size: 22px;
         cursor: pointer;
     }
+
+    #bar {
+        color: white;
+    }
+
     .nav-links ul {
         padding: 30px;
     }
+
 }
 
 /*-----------------*/
