--- a/src/main/resources/templates/Main_Screen.html
+++ b/src/main/resources/templates/Main_Screen.html
@@ -33,10 +33,38 @@
         <i class="fa fa-bars" id="bar" onclick="showMenu()"></i>
     </nav>
     <!-- Presentación -->
-    <div class="about-me">
+    <div class="reporting">
         <h1>Javier Borreguero</h1>
         <p>Desarrollador de software y amante de las nuevas tecnologías</p>
         <a href="#" class="learn-more">Saber más</a>
+    </div>
+</section>
+<!--Sección sobrer mí-->
+<section class="about-me">
+    <h1>Sobre mí</h1>
+    <div class="about-me-row">
+        <div class="about-me-col" id="about-me-image">
+            <h3>Imagen</h3>
+            <p>Aquí irá una imagen de mí</p>
+        </div>
+        <div class="about-me-col">
+            <h3>Descripción</h3>
+            <p>Aquí irá una breve descripción sobre mí</p>
+        </div>
+    </div>
+</section>
+<!-- Sección mi trayectoria-->
+<section class="trajectory">
+    <h1>Mi trayectoria</h1>
+    <div class="experience-row">
+        <div class="experience-col" id="work-experience-image">
+            <h3>Imagen</h3>
+            <p>Aquí irá la imagen de le empresa</p>
+        </div>
+        <div class="experience-col">
+            <h3>Descripción</h3>
+            <p>Aquí irá una breve descripción de la actividad</p>
+        </div>
     </div>
 </section>
 <script src="/js/Script.js" charset="" UTF-8></script>
