--- a/src/main/resources/templates/Main_Screen.html
+++ b/src/main/resources/templates/Main_Screen.html
@@ -56,14 +56,12 @@
 <!-- Sección mi trayectoria-->
 <section class="trajectory">
     <h1>Mi trayectoria</h1>
-    <div class="experience-row">
-        <div class="experience-col" id="work-experience-image">
-            <h3>Imagen</h3>
-            <p>Aquí irá la imagen de le empresa</p>
+    <div class="experience">
+        <div class="my-experience" id="my-experience-1">
         </div>
-        <div class="experience-col">
-            <h3>Descripción</h3>
-            <p>Aquí irá una breve descripción de la actividad</p>
+        <div class="my-experience">
+            <h2>Column 2</h2>
+            <p>Some text..</p>
         </div>
     </div>
 </section>
