--- a/src/main/resources/templates/Main_Screen.html
+++ b/src/main/resources/templates/Main_Screen.html
@@ -32,35 +32,43 @@
         </div>
         <i class="fa fa-bars" id="bar" onclick="showMenu()"></i>
     </nav>
-    <!-- Presentación -->
+    <!-- Introducción -->
     <div class="reporting">
         <h1>Javier Borreguero</h1>
         <p>Desarrollador de software y amante de las nuevas tecnologías</p>
         <a href="#" class="learn-more">Saber más</a>
     </div>
 </section>
-<!--Sección sobrer mí-->
+<!--Sección sobre mí-->
 <section class="about-me">
     <h1>Sobre mí</h1>
     <div class="about-me-row">
         <div class="about-me-col" id="about-me-image">
-            <h3>Imagen</h3>
-            <p>Aquí irá una imagen de mí</p>
         </div>
         <div class="about-me-col">
-            <h3>Descripción</h3>
-            <p>Aquí irá una breve descripción sobre mí</p>
+            <h2>Column 1</h2>
+            <p>Some text..</p>
         </div>
     </div>
 </section>
 <!-- Sección mi trayectoria-->
 <section class="trajectory">
     <h1>Mi trayectoria</h1>
+    <!-- Experiencia laboral -->
     <div class="experience">
-        <div class="my-experience" id="my-experience-1">
+        <div class="work-experience" id="first-work-experience">
         </div>
-        <div class="my-experience">
+        <div class="work-experience">
             <h2>Column 2</h2>
+            <p>Some text..</p>
+        </div>
+    </div>
+    <!-- Educación -->
+    <div class="studies">
+        <div class="studies-experience" id="my-studies-experience">
+        </div>
+        <div class="studies-experience">
+            <h2>Column 3</h2>
             <p>Some text..</p>
         </div>
     </div>
