--- a/src/main/resources/templates/Main_Screen.html
+++ b/src/main/resources/templates/Main_Screen.html
@@ -20,7 +20,7 @@
 <!-- Sección para la imagen, la barra de navegación y la presentación -->
 <section class="header">
     <nav>
-        <a class> <img src="images/webIcon.ico"></a>
+        <a class> <img src="/images/webIcon.ico"></a>
         <div class="nav-links" id="navLinks">
             <i class="fa fa-times" onclick="hideMenu()"></i>
             <ul>
@@ -45,9 +45,9 @@
     <div class="about-me-row">
         <div class="about-me-col" id="about-me-image">
         </div>
-        <div class="about-me-col">
-            <h2>Column 1</h2>
-            <p>Some text..</p>
+        <div class="about-me-col" th:each="personal : ${personalInfo}" id="about-me-image-description">
+            <h3 th:text="${personal.name}">Column 1</h3>
+            <p th:text="${personal.description}">Some text..</p>
         </div>
     </div>
 </section>
@@ -58,21 +58,30 @@
     <div class="experience">
         <div class="work-experience" id="first-work-experience">
         </div>
-        <div class="work-experience">
-            <h2>Column 2</h2>
-            <p>Some text..</p>
+        <div class="work-experience" id="first-work-experience-description">
+            <h3>Paradigma Digital</h3>
+            <p id="contract">Desarrollador de Software - Contrato en Prácticas</p>
+            <p>Primera experiencia laboral como desarrollador. Durante esta etapa estoy conociendo el día a día de una
+                consultora dedicada al desarrollo. Está siendo una etapa emocionante en la que estoy aprendiendo la
+                dinámica de trabajo y familiarizándome con nuevas tecnologías, pero sobre todo, me está permitiendo
+                aprender nuevas herramientas y metódicas de desarrollo potenciando los conocimientos aprendidos en el
+                aula.</p>
         </div>
     </div>
     <!-- Educación -->
     <div class="studies">
         <div class="studies-experience" id="my-studies-experience">
         </div>
-        <div class="studies-experience">
-            <h2>Column 3</h2>
-            <p>Some text..</p>
+        <div class="studies-experience" id="my-studies-experience-description">
+            <h3>U-tad</h3>
+            <p id="u-tad-full-name">Centro Universitario de Tecnología y Arte Digital </p>
+            <p>U-tad es una univeridad puntera en el sector de la tecnología. Cuenta con profesores que además de
+                impartir sus clases en la univerdidad, son empleados en diferentes empresas privada. Brindando la
+                oportunidad de impartir una enseñanza adaptada a la constante evolución de la tecnología. En U-tad, se
+                imparte un enseñanza de calidad en la que priman valores como la constancia y el trabajo en equipo. </p>
         </div>
     </div>
 </section>
-<script src="/js/Script.js" charset="" UTF-8></script>
+<script src="/js/Script.js" charset="utf-8"></script>
 </body>
 </html>
