--- a/src/main/resources/templates/Main_Screen.html
+++ b/src/main/resources/templates/Main_Screen.html
@@ -24,10 +24,10 @@
         <div class="nav-links" id="navLinks">
             <i class="fa fa-times" onclick="hideMenu()"></i>
             <ul>
-                <li href="#">Inicio</li>
-                <li href="#">Proyectos</li>
-                <li href="#">Currículum</li>
-                <li href="#">Contacto</li>
+                <li><a href="/" id="start">Inicio</a></li>
+                <li><a href="/Projects" id="projects">Proyectos</a></li>
+                <li><a href="#" id="cv">Currículum</a></li>
+                <li><a href="/Contact" id="contact">Contacto</a></li>
             </ul>
         </div>
         <i class="fa fa-bars" id="bar" onclick="showMenu()"></i>
